--- a/web/src/pages/PhotoUpload.module.css
+++ b/web/src/pages/PhotoUpload.module.css
@@ -1,6 +1,7 @@
 .container {
   min-height: 100vh;
   background-color: #f3f4f6;
+  color: #111827;
   display: flex;
   flex-direction: column;
 }
